--- a/src/app/components/items/items.component.html
+++ b/src/app/components/items/items.component.html
@@ -8,16 +8,20 @@
             <span class="price">{{ item.price }}</span>
           </h5>
           <p class="card-text">{{ item.info }}</p>
-          <button type="button" class="btn btn-primary show-info" (click)="reviewShow(item.id, $event)">{{ isReviewShow ? 'Hide review' : 'Show review' }}</button>
+          <button type="button" class="btn btn-primary show-info" (click)="reviewShow(item.id)">{{ btnText }}</button>
           <button type="button" class="btn btn-danger btn-remove"(click)="removeItem(item.id)">Remove item</button>
-          <div class="review-wrapper" *ngFor="let review of item.review">
-            <div class="review" *ngIf="isReviewShow">
+          <div class="review-wrapper d-none" data-id="{{item.id}}" *ngFor="let review of item.review">
+            <div class="review">
               <p>{{ review.name }}: {{ review.text }}</p>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="alert alert-primary" role="alert" *ngIf="!items.length">Ой, список товаров пуст!</div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      <div class="alert alert-primary items-alert" role="alert" *ngIf="!items.length">Ой, список товаров пуст!</div>
+    </div>
   </div>
 </div>
